--- a/SEGREGATED/css/style.css
+++ b/SEGREGATED/css/style.css
@@ -265,7 +265,7 @@
 		background-attachment: fixed;
 		background-color: #555;
 		background-size: cover;
-		background-position: -50%;
+		background-position: -0px -200px;
 	}
 	.jumbotron h1{
 		color: #fff;
@@ -273,7 +273,7 @@
 
 	/*Different backgrounds*/
 	.home-jumbotron{
-		background-image: url("../images/home-jumbotron.jpg")
+		background-image: url("../images/home-jumbotron.jpg");
 	}
 
 /*Main Body CSS*/
